--- a/sass/mediaqueries/_media-queries.scss
+++ b/sass/mediaqueries/_media-queries.scss
@@ -97,3 +97,233 @@
       font-size: 14px;
   }
 }
+/*services mediaqueries*/
+@media (max-width: 768px) {
+  .container {
+      flex-direction: column;
+      align-items: flex-start;
+      padding: 10px 0;
+  }
+
+  .logo-services img {
+      height: 30px;
+  }
+
+  .nav-services ul {
+      flex-direction: column;
+      gap: 10px;
+  }
+
+  .carousel-caption h1 {
+      font-size: 40px;
+
+      span {
+          font-size: 30px;
+      }
+  }
+
+  .carousel-caption p {
+      font-size: 14px;
+  }
+
+  .services-section .services-container {
+      grid-template-columns: 1fr;
+  }
+
+  .services-column h2 {
+      font-size: 30px;
+      padding-top: 50px;
+  }
+
+  .services-column ol li {
+      font-size: 20px;
+  }
+
+  .services-image-bottom {
+      max-width: 30px;
+      height: 30px;
+  }
+
+  .cta-section h2 {
+      font-size: 24px;
+  }
+
+  .cta-button {
+      padding: 6px 12px;
+      font-size: 14px;
+  }
+
+  .cta-grid-item {
+      max-width: 100%;
+      margin-bottom: 20px;
+  }
+}
+
+/* Media Queries para tablets */
+@media (min-width: 769px) and (max-width: 1024px) {
+  .container {
+      padding: 15px 0;
+  }
+
+  .logo-services img {
+      height: 35px;
+  }
+
+  .nav-services ul {
+      gap: 15px;
+  }
+
+  .carousel-caption h1 {
+      font-size: 60px;
+
+      span {
+          font-size: 50px;
+      }
+  }
+
+  .carousel-caption p {
+      font-size: 18px;
+  }
+
+  .services-section .services-container {
+      grid-template-columns: 1fr 1fr;
+  }
+
+  .services-column h2 {
+      font-size: 40px;
+  }
+
+  .services-column ol li {
+      font-size: 25px;
+  }
+  
+  .cta-section h2 {
+      font-size: 30px;
+  }
+}
+
+/*Nosotros*/
+/* Pantallas pequeñas (móviles) */
+@media (max-width: 600px) {
+  .header {
+      padding: 20px 10px;
+  }
+  
+  .header-top {
+      flex-direction: column;
+      align-items: center;
+  }
+  
+  .header-logo {
+      margin-left: 0; 
+  }
+  
+  .header-icon {
+      width: 40px; 
+  }
+  
+  .logo {
+      width: 40px; 
+  }
+  
+  .header-top h1 {
+      margin-top: 20px;
+      margin-right: 0;
+      text-align: center;
+  }
+  
+  .header .contact-button {
+      font-size: 14px;
+      padding: 8px 16px;
+      margin-bottom: 20px;
+  }
+  
+  .nosotros h2 {
+      font-size: 36px;
+  }
+  
+  .team-container {
+      grid-template-columns: repeat(2, 1fr); 
+  }
+  
+  .member-image {
+      width: 80px; 
+      height: 80px; 
+  }
+  
+  .reason-why {
+      padding: 20px;
+      margin: 20px;
+  }
+  
+  .reason-why h2 {
+      font-size: 24px;
+  }
+  
+  .reason-why p {
+      font-size: 14px;
+  }
+}
+
+/* Pantallas medianas (tabletas) */
+@media (min-width: 601px) and (max-width: 1024px) {
+  .header {
+      padding: 30px 15px;
+  }
+  
+  .header-top {
+      flex-direction: row;
+  }
+  
+  .header-icon {
+      width: 45px; 
+  }
+  
+  .logo {
+      width: 45px; 
+  }
+  
+  .header .contact-button {
+      font-size: 15px;
+      padding: 9px 18px;
+  }
+  
+  .nosotros h2 {
+      font-size: 40px;
+  }
+  
+  .team-container {
+      grid-template-columns: repeat(3, 1fr); 
+  }
+  
+  .member-image {
+      width: 90px; 
+      height: 90px; 
+  }
+  
+  .reason-why {
+      padding: 30px;
+      margin: 30px;
+  }
+  
+  .reason-why h2 {
+      font-size: 26px;
+  }
+  
+  .reason-why p {
+      font-size: 15px;
+  }
+}
+
+/*Blog*/ 
+@media (max-width: 768px) {
+  .grid-articulos {
+      grid-template-columns: repeat(2, 1fr); 
+  }
+}
+
+@media (max-width: 480px) {
+  .grid-articulos {
+      grid-template-columns: 1fr; 
+  }
+}
